add description para

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <img src="assets/favicon.svg" width="70px"/>
             </span>
           </div>  
-            <p>Some para</p>
+            <p id="page-description">This is where I store up all my games' save files as trophies. Feel free to browse and download anything you like.</p>
         </div>
 
         <div id="body-section">
@@ -46,7 +46,7 @@
         </div>
         
         <div id="footer-section">
-              
+
         </div>
     </div>
 
