--- a/index.html
+++ b/index.html
@@ -46,7 +46,20 @@
         </div>
         
         <div id="footer-section">
-
+          <p>
+            Made by
+            <a
+              href="https://github.com/Blankscreen-exe"
+              target="_blank"
+              >M. Hammad Hassan</a
+            >
+            and hosted on ⚡️
+            <a
+              href="https://github.com/Blankscreen-exe/The-Save-Stash"
+              target="_blank"
+              >Github</a
+            >
+          </p>
         </div>
     </div>
 
