--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </span>
           </div>  
             <p id="page-description">This is where I store up all my games' save files as trophies. Feel free to browse and download anything you like.</p>
+			<p id="page-description">I can not guarantee that all save files will be 100% completed though. So keep that in mind.</p>
         </div>
 
         <div id="body-section">
