--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <tr>
                   <th>Game</th>
                   <th>Platform</th>
-                  <th>File Name</th>
+                  <th>Download</th>
                 </tr>
             </thead>
             <tbody>
